[gd_scene load_steps=30 format=3 uid="uid://d3jotadblnfxy"]

[ext_resource type="Script" uid="uid://cka6rya3uephy" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://bthiwsoqifa5x" path="res://Assets/Tilemap/monochrome_tilemap_transparent_packed.png" id="1_v0iea"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnsp"]
atlas = ExtResource("1_v0iea")
region = Rect2(16, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("1_v0iea")
region = Rect2(16, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("1_v0iea")
region = Rect2(16, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("1_v0iea")
region = Rect2(16, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("1_v0iea")
region = Rect2(64, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("1_v0iea")
region = Rect2(64, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("1_v0iea")
region = Rect2(64, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("1_v0iea")
region = Rect2(64, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("1_v0iea")
region = Rect2(16, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("1_v0iea")
region = Rect2(32, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("1_v0iea")
region = Rect2(16, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("1_v0iea")
region = Rect2(32, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("1_v0iea")
region = Rect2(16, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("1_v0iea")
region = Rect2(32, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("1_v0iea")
region = Rect2(16, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("1_v0iea")
region = Rect2(32, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 240, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0gysh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vfarp"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cvnsp"]
radius = 6.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_cvnsp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_0gysh")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_vfarp")

[node name="detect_enemy" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_enemy"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_cvnsp")

[node name="Timer" type="Timer" parent="detect_enemy"]

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="area_entered" from="detect_enemy" to="." method="_on_detect_enemy_area_entered"]
[connection signal="timeout" from="detect_enemy/Timer" to="." method="_on_timer_timeout"]
